add middleware and fix jwt
